# ethyme.cpp

./: .gitignore  CMakeLists.txt  Doxyfile  annotated.html  annotated_dup.js  channel_8hpp_source.html  class_ethyme_1_1_client-members.html  class_ethyme_1_1_client.html  class_ethyme_1_1_client.js  class_ethyme_1_1_collections_1_1_collection-members.html  class_ethyme_1_1_collections_1_1_collection.html  class_ethyme_1_1_collections_1_1_collection.js  class_ethyme_1_1_collections_1_1_collection_1_1_iterator-members.html  class_ethyme_1_1_collections_1_1_collection_1_1_iterator.html  class_ethyme_1_1_collections_1_1_collection_1_1_iterator.js  class_ethyme_1_1_command-members.html  class_ethyme_1_1_command.html  class_ethyme_1_1_command.js  class_ethyme_1_1_events_1_1_event-members.html  class_ethyme_1_1_events_1_1_event.html  class_ethyme_1_1_events_1_1_event.js  class_ethyme_1_1_events_1_1_event__inherit__graph.map  class_ethyme_1_1_events_1_1_event__inherit__graph.md5  class_ethyme_1_1_events_1_1_message_create-members.html  class_ethyme_1_1_events_1_1_message_create.html  class_ethyme_1_1_events_1_1_message_create.js  class_ethyme_1_1_events_1_1_message_create__coll__graph.md5  class_ethyme_1_1_events_1_1_message_create__inherit__graph.map  class_ethyme_1_1_events_1_1_ready-members.html  class_ethyme_1_1_events_1_1_ready.html  class_ethyme_1_1_events_1_1_ready.js  class_ethyme_1_1_events_1_1_ready__coll__graph.map  class_ethyme_1_1_events_1_1_ready__coll__graph.md5  class_ethyme_1_1_logger-members.html  class_ethyme_1_1_logger.html  class_ethyme_1_1_logger.js  class_ethyme_1_1_structures_1_1_channel-members.html  class_ethyme_1_1_structures_1_1_channel.html  class_ethyme_1_1_structures_1_1_channel.js  class_ethyme_1_1_structures_1_1_channel__coll__graph.map  (+140 more)
.github/ISSUE_TEMPLATE/: bug_report.md
commands/: channel.hpp  greet.hpp  guilds.hpp
include/: client.hpp  common.hpp  constants.hpp  ethyme.hpp  logger.hpp
include/collections/: collection.hpp  refcollection.hpp
include/commands/: command.hpp
include/events/: event.hpp  guildcreate.hpp  messagecreate.hpp  ready.hpp
include/structures/: channel.hpp  collection.hpp  entity.hpp  exception.hpp  guild.hpp  member.hpp  mentions.hpp  message.hpp  role.hpp  snowflake.hpp  user.hpp
include/structures/channels/: channel.hpp  directmessage.hpp  groupdirectmessage.hpp  guildcategory.hpp  guildchannel.hpp  guildnews.hpp  guildstore.hpp  guildtext.hpp  guildvoice.hpp  textchannel.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+6 more)
src/: client.cpp  commandhandler.cpp  ethyme.cpp  logger.cpp  websocketmessage.cpp
src/collections/: collection.cpp  refcollection.cpp
src/commands/: command.cpp
src/events/: guildcreate.cpp  messagecreate.cpp  ready.cpp
src/structures/: channel.cpp  collection.cpp  entity.cpp  guild.cpp  member.cpp  mentions.cpp  message.cpp  role.cpp  snowflake.cpp  user.cpp
src/structures/channels/: channel.cpp  (+9 more)
test/: example.cpp
test/commands/: greet.hpp  guilds.hpp
tests/: example.cpp
tests/commands/: guilds.hpp
